2001-03-01  Ian McKellar  <ian@eazel.com>

	* scintilla-control/scintilla.oafinfo:
	Added a nautilus:view_as_name property to the oafinfo file so that
	the Scintilla component can be used as a Nautilus view.
	
2001-02-28  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.

2001-01-10  JP Rosevear  <jpr@helixcode.com>

	* scintilla-control/scintilla/ScintillaGTK.cxx: proper casting

2001-01-06  Dave Camp  <dave@helixcode.com>

	* scintilla-control/scintilla.oafinfo: Updated.

	* scintilla-control/scintilla-persist-file.c: Moved highlighting
	functions to scintilla-highlight.h
	(impl_load): call set_language_properties() with the mime type of the
	file.
	
	* scintilla-control/scintilla-control.c (scintilla_factory): Add the
	PersistStream interface to the control.

	* scintilla-control/scintilla-persist-stream.[ch]: New file.

	* scintilla-control/scintilla-highlight.[ch]: New file.

	* configure.in: check for gnome-vfs.

2000-12-18  JP Rosevear  <jpr@helixcode.com>

	* scintilla-control/scintilla-ui.xml: Fix toolbar placement

2000-12-18  Dave Camp  <dave@helixcode.com>

	* scintilla-control/scintilla-control.c (scintilla_factory): Set the
	width of the line number margin.

2000-12-03  Dave Camp  <dave@helixcode.com>

	* idl/GDL.idl: Don't include the event channel idl.

2000-12-02  Dave Camp  <dave@helixcode.com>

	* scintilla-control/scintilla-ui.xml: Added toolbar items.

	* scintilla-control/scintilla-editor-buffer.c (impl_get_chars): 
	Renamed from impl_read().
	(impl_insert): Changed to reflect idl changes.
	(init_editor_buffer_corba_class): s/read/get_chars/.

	* scintilla-control/scintilla-control.c (scintilla_factory): Added 
	selection_start and selection_end properties.
	(scintilla_activate_cb): Rearrange the freezing.
	(get_prop): Implement the selection_start and selection_end props.

	* idl/editor-buffer.idl: Replaced read() with get_chars().
	Take a null-terminated string for insert().
